fix invisible search-bar input on Firefox

--- a/css/donut.css
+++ b/css/donut.css
@@ -1750,7 +1750,8 @@ header#nav-header {
 }
 .side-search-bar .qa-search-field.form-control {
   border-radius: 4px;
-  padding: 20px 12px;
+  padding: 10px 12px;
+  height: auto;
 }
 .donut-top {
   display: inline-block;
